<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameManager.DemoFMActivity">


    <TextView
        android:id="@+id/tv_headerFM_Demo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/veiligthuis_blauw"
        android:padding="12dp"
        android:text="@string/tv_headerFM_Demo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnFragFM1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_headerFM_Demo">

        <FrameLayout
            android:id="@+id/frameFM_Demo2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnFragFM1"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@drawable/button_veilig_thuis_homescreen"
        android:text="@string/fragment1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFragFM2"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@drawable/button_veilig_thuis_homescreen"
        android:text="@string/fragment2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFragFM1" />
</androidx.constraintlayout.widget.ConstraintLayout>