<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentsBasic.FragmentBasicActivity">

    <Button
        android:id="@+id/btn_frame_basics2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_veilig_thuis_homescreen"
        android:text="@string/btn_frambasics2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_frame_basics1"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderFarmeBasic" />

    <Button
        android:id="@+id/btn_frame_basics1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/button_veilig_thuis_homescreen"
        android:text="@string/frame_basics1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btn_frame_basics2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderFarmeBasic" />

    <FrameLayout
        android:id="@+id/flfragment_basics"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toTopOf="@+id/sw_frame_basic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_frame_basics1" />

    <TextView
        android:id="@+id/tvHeaderFarmeBasic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/veiligthuis_blauw"
        android:backgroundTint="@color/veiligthuis_blauw"
        android:padding="4dp"
        android:text="@string/tvHeaderBasicFrames"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/sw_frame_basic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>