<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInOut.SignInActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="177dp"
        android:layout_height="219dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/veilig_thuis_logo234x" />

    <EditText
        android:id="@+id/editTextEmailSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/logIn_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextPasswordSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/logIn_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailSignIn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailSignIn"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignIn" />

    <Button
        android:id="@+id/buttonLogIn"
        :
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgrond
        android:backgroundTint="@color/veiligthuis_blauw"
        android:text="@string/nav_logIn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignIn" />"@drawable/button_veilig_thuis_homescreen.xml"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgetPassword" />

    <TextView
        android:id="@+id/textViewForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Forgot password"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordSignIn"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignIn" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordSignIn"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignIn" />
</androidx.constraintlayout.widget.ConstraintLayout>