<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cs_canvas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:padding="16dp"
    tools:context=".Tips.TipsMenuActivity">

    <Button
        android:id="@+id/btn_listview_ui_normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/button_veilig_thuis_homescreen"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/btn_listview_ui_normaal"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnSV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/button_veilig_thuis_homescreen"
        android:text="@string/btn_tips_search"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_listview_ui_normal"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_tips_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_veilig_thuis_homescreen"
        android:text="@string/btn_tip_menu_upload"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_listview_ui_normal"
        app:layout_constraintStart_toStartOf="@+id/btn_listview_ui_normal"
        app:layout_constraintTop_toBottomOf="@+id/btn_listview_ui_normal" />

    <Button
        android:id="@+id/btn_tips_itemClick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_veilig_thuis_homescreen"
        android:text="Tips CRUD"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_tips_upload"
        app:layout_constraintStart_toStartOf="@+id/btn_tips_upload"
        app:layout_constraintTop_toBottomOf="@+id/btn_tips_upload" />

    <Button
        android:id="@+id/btn_tip_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/veiligthuis_blauw"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/btnSV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_listview_ui_normal"
        app:layout_constraintStart_toStartOf="@+id/btnSV"
        app:layout_constraintTop_toBottomOf="@+id/btnSV" />

    <Button
        android:id="@+id/btnSP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/btn_tip_search"
        app:layout_constraintStart_toEndOf="@+id/btn_tips_itemClick"
        app:layout_constraintTop_toBottomOf="@+id/btn_tip_search" />
</androidx.constraintlayout.widget.ConstraintLayout>